// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-radial-progress #render should render component as expected (1) 1`] = `
<gux-radial-progress screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (2) 1`] = `
<gux-radial-progress value="0" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" aria-label="Uploading file">
      <svg class="gux-svg-container" viewBox="0 0 48 48" role="presentation">
        <circle cx="50%" cy="50%" r="22" class="gux-static-circle">
        </circle>
        <circle cx="50%" cy="50%" r="22" class="gux-dynamic-circle" stroke-dashoffset="138.23007675795088" stroke-dasharray="138.23007675795088" stroke-linecap="round">
        </circle>
        <text x="50%" y="50%" dominant-baseline="central" class="gux-percentage">
          0%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (3) 1`] = `
<gux-radial-progress value="10" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <div role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" aria-label="Uploading file">
      <svg class="gux-svg-container" viewBox="0 0 48 48" role="presentation">
        <circle cx="50%" cy="50%" r="22" class="gux-static-circle">
        </circle>
        <circle cx="50%" cy="50%" r="22" class="gux-dynamic-circle" stroke-dashoffset="124.4070690821558" stroke-dasharray="138.23007675795088" stroke-linecap="round">
        </circle>
        <text x="50%" y="50%" dominant-baseline="central" class="gux-percentage">
          10%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (4) 1`] = `
<gux-radial-progress value="100" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" aria-label="Uploading file">
      <svg class="gux-svg-container" viewBox="0 0 48 48" role="presentation">
        <circle cx="50%" cy="50%" r="22" class="gux-static-circle">
        </circle>
        <circle cx="50%" cy="50%" r="22" class="gux-dynamic-circle" stroke-dashoffset="0" stroke-dasharray="138.23007675795088" stroke-linecap="round">
        </circle>
        <text x="50%" y="50%" dominant-baseline="central" class="gux-percentage">
          100%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (5) 1`] = `
<gux-radial-progress value="123" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (6) 1`] = `
<gux-radial-progress value="200" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (7) 1`] = `
<gux-radial-progress value="10" max="100" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <div role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" aria-label="Uploading file">
      <svg class="gux-svg-container" viewBox="0 0 48 48" role="presentation">
        <circle cx="50%" cy="50%" r="22" class="gux-static-circle">
        </circle>
        <circle cx="50%" cy="50%" r="22" class="gux-dynamic-circle" stroke-dashoffset="124.4070690821558" stroke-dasharray="138.23007675795088" stroke-linecap="round">
        </circle>
        <text x="50%" y="50%" dominant-baseline="central" class="gux-percentage">
          10%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (8) 1`] = `
<gux-radial-progress value="10" max="10" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <div role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10" aria-label="Uploading file">
      <svg class="gux-svg-container" viewBox="0 0 48 48" role="presentation">
        <circle cx="50%" cy="50%" r="22" class="gux-static-circle">
        </circle>
        <circle cx="50%" cy="50%" r="22" class="gux-dynamic-circle" stroke-dashoffset="0" stroke-dasharray="138.23007675795088" stroke-linecap="round">
        </circle>
        <text x="50%" y="50%" dominant-baseline="central" class="gux-percentage">
          100%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (9) 1`] = `
<gux-radial-progress value="test" max="100" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (10) 1`] = `
<gux-radial-progress value="-123" max="100" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (11) 1`] = `
<gux-radial-progress value="200" max="100" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (12) 1`] = `
<gux-radial-progress value="10" max="test" screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading screenreader-text="Uploading file" context="modal">
    </gux-radial-loading>
  </template>
</gux-radial-progress>
`;
